--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-GWorkspace is GNUstep's Workspace Manager and offers a a File Manager and a Desktop.
+GWorkspace is GNUstep's Workspace Manager and offers a File Manager and an optional Desktop with associated services and tools.
 Inspired by the NeXT workspace manager, it incorporates modern features and offers many conveniencies.
 
 File Manager:
