Annotate what's happening in path_moved() to make it slightly more readable.
Additionally, don't pass a +1 to strncpy(); we actually don't have that extra
character (reserved to nul-terminator), although it's unlikely
that'll make a difference.

We should likely either rewrite this function in Objective-C, or use strncat()
to make it less likely a mistake is being made. It's also unnerving that
identical code is present twice: once in gmds.m, once in mdextractor.m.

I made no changes in this regard at this time, as it may have been done for
performance reasons. As unlikely as it is that they're worth the reduced
readability, I wished to avoid making this potentially performance-reducing
change without further input.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,22 @@
+2017-12-31  Ivan Vucica  <ivan@vucica.net>
+
+	* GWMetadata/gmds/mdextractor/mdextractor.m (path_moved):
+	* GWMetadata/gmds/gmds/gmds.m (path_moved):
+	Annotate what's happening in path_moved(), hopefully making
+	it slightly more readable.
+
+	Don't pass a +1 to strncpy(); we actually don't have that extra
+	character (reserved to nul-terminator), although it's unlikely
+	that'll make a difference.
+
 2017-12-22  Svante Signell  <svante.signell@gmail.com>
             Yavor Doganov  <yavor@gnu.org>
 
 	* GWMetadata/gmds/mdextractor/mdextractor.m (path_moved):
 	* GWMetadata/gmds/gmds/gmds.m (path_moved): Avoid PATH_MAX and
 	allocate string dynamically; fixes build failure on GNU/Hurd.
+
+	Contributed at https://savannah.gnu.org/bugs/?52731.
 
 2016-06-07 Riccardo Mottola <rm@gnu.org>
 
