--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2018-01-11 Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/configure.ac
+	* GWorkspace/configure
+	Remove sub-folder configures and merge into top-level
+
 2016-06-07 Riccardo Mottola <rm@gnu.org>
 
 	* Inspector/ContentViewers/ImageViewer/ImageViewer.h
