--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-01-17  Riccardo Mottola <rm@gnu.org>
+
+	* GWorkspace/Finder/Finder.m
+	Fix allocated class type.
+
 2018-01-11 Riccardo Mottola <rm@gnu.org>
 
 	* FSNode/configure
