--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2018-01-17  Riccardo Mottola <rm@gnu.org>
 
+	* Tools/ddbd/ddbd.m
+	Fix allocated class type.
+
+2018-01-17  Riccardo Mottola <rm@gnu.org>
+
 	* GWorkspace/Finder/Finder.m
 	Fix allocated class type.
 
