--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2018-01-24  Riccardo Mottola <rm@gnu.org>
+
+	* GWMetadata/MDFinder/MDFinder.h
+	* GWMetadata/MDFinder/MDFinder.m
+	Fix warnings: make NSMenuItem follow protocol.
+
 2018-01-17  Riccardo Mottola <rm@gnu.org>
 
 	* Tools/ddbd/ddbd.m
