Return correct object in case of exception!

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,9 @@
 	* Operation/FileOpInfo.m
 	Fix string format warning.
 
+	* GWMetadata/gmds/mdextractor/mdextractor.m
+	Return correct object in case of exception!
+
 2018-01-17  Riccardo Mottola <rm@gnu.org>
 
 	* Tools/ddbd/ddbd.m
