--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2018-01-25  Riccardo Mottola <rm@gnu.org>
+
+	* GWMetadata/gmds/mdextractor/mdextractor.m
+	* Tools/fswatcher/fswatcher-inotify.m
+	* Tools/fswatcher/fswatcher.m
+	Clean up unused is_daemon static var.
+
 2018-01-24  Riccardo Mottola <rm@gnu.org>
 
 	* GWMetadata/MDFinder/MDFinder.h
