--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-07-06  Riccardo Mottola <rm@gnu.org>
+
+	* Inspector/ContentViewers/AppViewer/AppViewer.m
+	Do not lookup the icon for empty names, reset icon if none is found.
+
 2018-03-13  Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Resources/Japanese.lproj/Localizable.strings
