--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2018-08-01  Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNodeRepIcons.m
+	Fix inconsistent condition for  [volumes containsObject: nodepath]
+
+
 2018-07-06  Riccardo Mottola <rm@gnu.org>
 
 	* Inspector/ContentViewers/AppViewer/AppViewer.m
