--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2018-12-08  Riccardo Mottola <rm@gnu.org>
+
+	* FSNode/FSNode.m
+	Do not set mount type because of file system type, just rely now on mounting/unmounting of volumes
+
 2018-11-19  Riccardo Mottola <rm@gnu.org>
 
 	* GWorkspace/Desktop/GWDesktopView.m (showMountedVolumes)
