--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2020-10-29  Riccardo Mottola <rm@gnu.org>
+
+	* Inspector/ContentViewers/ImageViewer/ImageViewer.h
+        * Inspector/ContentViewers/ImageViewer/ImageViewer.m
+        * Inspector/ContentViewers/ImageViewer/Resizer.h
+        * Inspector/ContentViewers/ImageViewer/Resizer.m
+        * Inspector/ContentViewersProtocol.h
+	Extract ImageViewerProtocol, make ImageViewer adopt it, set the Proxy in the resizer explicitely and avoid using a serverConnection variable.
+
 2020-03-11  Riccardo Mottola <rm@gnu.org>
 	* GWorkspace/Thumbnailer/ImageThumbnailer/ImageThumbnailer.m
 	Update Scaling code to Bilinear from PRICE.
