--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2021-05-21  Riccardo Mottola <rm@gnu.org>
+
+	* configure
+	* configure.ac
+	substitute CC, CPP, CXX variables so subprojects pick them up
+
 2021-05-08  Riccardo Mottola <rm@gnu.org>
 
 	* Inspector/Tools.h
