--- a/GWorkspace/Resources/English.lproj/Localizable.strings
+++ b/GWorkspace/Resources/English.lproj/Localizable.strings
@@ -393,6 +393,7 @@
 
 "Omnipresent"="Omnipresent";
 "Autohide Tabbed Shelf"="Autohide Tabbed Shelf";
+"Single Click Launch"="Single Click Launch";
 
 
 /* OperationPrefs.m */
