improve French translation

--- a/GWorkspace/Resources/French.lproj/Localizable.strings
+++ b/GWorkspace/Resources/French.lproj/Localizable.strings
@@ -412,7 +412,7 @@
 
 "Omnipresent"="Omniprésent";
 "Autohide Tabbed Shelf"="Cacher automatiquement les étagères";
-"Single Click Launch"="Lancement simple clic";
+"Single Click Launch"="Lancement par un clic simple";
 
 
 /* OperationPrefs.m */
